アプリケーションのUIの変更 ・モード選択機能の追加（ranging・localize） ・入力機能の追加（端末番号・出力ファイル名）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Wi-Fi_RTT_mesure</string>
+    <string name="title_activity_ranging">RangingActivity</string>
+    <string name="title_activity_localize">LocalizeActivity</string>
 </resources>
